# MirageRender

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
CMakeBuild/: .gitignore  nix64_gcc.sh  win32_msvc.bat  win32_msvc_debug.bat  win64_mingw.bat  win64_mingw_cross.sh  win64_msvc.bat  win64_msvc_debug.bat
lib/msvc/x86/: lua5.3.lib
res/: cornellbox_co.mtl  cornellbox_custom.mtl  cornellbox_empty.mtl  cornellbox_empty0.mtl  cornellbox_empty3.mtl  cornellbox_original.mtl  cornellbox_water.mtl  directional_light.mtl  dragon.mtl
res/models/: cornellbox_custom.mtl  cornellbox_empty.mtl  cornellbox_nolight.mtl  cornellbox_original.mtl  cornellbox_water.mtl  dragon.mtl
res/models/cornellboxes/: cornellbox_custom.mtl  cornellbox_empty.mtl  cornellbox_nolight.mtl  cornellbox_original.mtl  cornellbox_water.mtl
res/models/mitsuba/: mitsuba.mtl
res/models/sponza_dabrovic/: dabrovic_sponza.mtl
res/scenes/: scene_sample.scn
res/scripts/: cornellbox.lua  example.lua  mitsuba.lua  sponza.lua  test.lua
src/: config.h  macros.h  main.cpp
src/accelerators/: bvh.cpp  bvh.h  kdtree.cpp  kdtree.h
src/cameras/: orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
src/core/: aabb.cpp  aabb.h  accelerator.cpp  accelerator.h  camera.cpp  camera.h  display.cpp  display.h  film.cpp  film.h  input.cpp  input.h  intersection.cpp  intersection.h  light.cpp  light.h  luaengine.cpp  luaengine.h  material.cpp  material.h  matfactory.cpp  matfactory.h  objfactory.cpp  objfactory.h  primitive.cpp  primitive.h  ray.cpp  ray.h  renderer.h  sample.cpp  sample.h  scene.cpp  scene.h  shape.cpp  shape.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex.cpp  (+3 more)
src/lights/: dirlight.cpp  dirlight.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
src/materials/: dielectric.cpp  dielectric.h  diffusemat.cpp  diffusemat.h  glassmat.cpp  glassmat.h  glossymat.cpp  glossymat.h  specmat.cpp  specmat.h
src/math/: mat4.cpp  mat4.h  math.h  quaternion.cpp  quaternion.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/renderers/: pathtracer.cpp  pathtracer.h  raytracer.cpp  raytracer.h
src/shapes/: mesh.cpp  mesh.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/utils/: imgutils.h  strutils.h
